--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -306,21 +306,9 @@ header .head_back span {
     padding:0 25px;
     font-size: 17px;
     color:#010101;
-    height:50px;
-    line-height: 50px;
+    height:45px;
+    line-height: 45px;
     font-family:inaviL;
-}
-.swiper_1 {
-    padding-left: 25px!important;
-    width: 100%;
-}
-.swiper_1 .slide {
-    width: 240px;
-    height:140px;
-    background-image: url('../images/dummy_img/img_1.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
 }
 .tour_start_wrap .content {
     font-size: 12px;
@@ -977,35 +965,6 @@ header .head_back span {
 
 =============================================*/
 
-
-.tour_sub_wrap .swiper_img_box {
-    position: relative;
-}
-.tour_sub_wrap .swiper_img_box .swiper_img {
-    width:100%;
-    height: 55vw;
-    max-height: 320px;
-    background-image: url('../images/dummy_img/img_1.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    
-}
-.tour_sub_wrap .swiper_img_box .num {
-    width:40px;
-    height:20px;
-    line-height:20px;
-    background-color: rgba(0, 0, 0, 0.5);
-    border-radius: 10px;
-    font-size: 11px;
-    color: #fff;
-    font-family: inaviM;
-    text-align: center;
-    position: absolute;
-    bottom: 11px;
-    right: 12px;
-}
-
 .tour_sub_wrap .notice_box {
     text-align: center;
     background-color: #f7f8f9;
@@ -1026,6 +985,7 @@ header .head_back span {
     top: -9px;
     left: 50%;
     margin-left: -19px;
+    z-index: 200;
 }
 .tour_sub_wrap .notice_box .txt {
     font-family: inaviM;
@@ -1119,11 +1079,6 @@ header .head_back span {
 
 =============================================*/
 
-/* 추후 swiper로 변경 및 삭제 */
-/* .tour_sub_wrap .swiper img {
-    width:240px;
-    padding-left: 25px;
-} */
 .tour_sub_wrap .desc_box {
     padding: 10px 25px 35px;
 }
