--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -151,9 +151,15 @@ header button.share {
 header .head_back {
     
 }
-header .head_back img {
-    width: 16px;
-    margin-right: 10px;
+header .head_back .back_box {
+    display: inline-block;
+    cursor: pointer;
+}
+header .head_back .back_box img {
+    width: 17px;
+    margin-right: 15px;
+    position: relative;
+    top: 1px;
 }
 header .head_back span {
     font-size: 14px;
@@ -1208,6 +1214,14 @@ header .head_back span {
 .tour_sub_wrap ul.view_list li img {
     width:100%;
     margin-bottom:10px;
+}
+.tour_sub_wrap ul.view_list li .back_img {
+    width:100%;
+    height:100px;
+    margin-bottom:10px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 .tour_sub_wrap ul.view_list li:nth-child(3n) {
     margin-right: 0;
