--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -300,6 +300,47 @@ header .head_back span {
     padding:0;
     font-family:inaviM;
 }
+
+.pop_overay_2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    background: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height:100%;
+    z-index: 9999;
+}
+.pop_overay_2 .pop_cont {
+    width:100px;
+    text-align: center;
+    position: absolute;
+    top: 50px;
+    right: 25px;
+    border-radius: 4px;
+    overflow: hidden;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.35);
+}
+.pop_overay_2 .pop_cont ul {
+    width:100%;
+    background:#fff;
+}
+.pop_overay_2 .pop_cont ul li {
+    height:45px;
+    line-height: 45px;
+    color: #010101;
+    font-size: 12px;
+    text-align: center;
+    border-bottom:1px solid #e5e5e5;
+    cursor: pointer;
+    font-family:inaviL;
+}
+.pop_overay_2 .pop_cont ul li:last-child {
+    border-bottom: 0;
+}
 /*============================================
 
                  투어 소개 페이지
