--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -617,9 +617,18 @@ header .head_back span {
     float: left;
     width:calc(50% - 5px);
     position: relative;
+    cursor: pointer;
 }
 .recom_stamp ul.next_stamp li .simg {
     width:100%;
+    margin-bottom:10px;
+}
+.recom_stamp ul.next_stamp li .backImg {
+    width:100%;
+    height: 25vw;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     margin-bottom:10px;
 }
 .recom_stamp ul.next_stamp li:nth-child(2n+1) {
@@ -629,8 +638,9 @@ header .head_back span {
     font-family:inaviL;
     font-size: 14px;
     color:#010101;
-    line-height: 15px;
+    line-height: 16px;
     font-weight: normal;
+    word-break: keep-all;
 }
 .recom_stamp ul.next_stamp li p {
     font-family:inaviL;
@@ -772,7 +782,7 @@ header .head_back span {
     height:65px;
     border-radius: 3px;
     margin-right: 15px;
-    background-image:url('../images/dummy_img/img_3.jpg');
+    /* background-image:url('../images/dummy_img/img_3.jpg'); */
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
