--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1148,6 +1148,11 @@ header .head_back span {
     line-height: 18px;
     margin-bottom:10px;
     word-break: keep-all;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 .tour_sub_wrap .desc_box span {
     font-size: 12px;
