--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -217,6 +217,62 @@ header .head_back span {
     padding:66px 0 30px;
     font-family:inaviL;
 }
+.pop_overay .pop_cont .text_2 .check {
+    text-align: left;
+    padding: 0 50px
+}
+.pop_overay .pop_cont .text_2 .check.durunubi {
+    margin-bottom: 5px;
+}
+.pop_overay .pop_cont .text_2 .check label {
+    font-size: 12px;
+    color:#000;
+    line-height: 14px;
+}
+.pop_overay .pop_cont .text_2 .check input[type="checkbox"] {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    border: 0;
+}
+.pop_overay .pop_cont .text_2 .check input[type="checkbox"] + label {
+    display: inline-block;
+    position: relative;
+    padding-left: 16px;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+}
+.pop_overay .pop_cont .text_2 .check input[type="checkbox"] + label:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 1px;
+    width: 10px;
+    height: 10px;
+    text-align: center;
+    background: #fff;
+    border: 1px solid #000000;
+    border-radius: 100%;
+}
+.pop_overay .pop_cont .text_2 .check input[type="checkbox"]:checked + label:before {
+   background: #fff;
+   border-color: #000000;
+}
+.pop_overay .pop_cont .text_2 .check input[type="checkbox"]:checked + label:after {
+   content: '';
+   position: absolute;
+   top: 4px;
+   left: 3px;
+   width: 6px;
+   height: 6px;
+   background: #000000;
+   border-radius: 100%;
+}
 .pop_overay .pop_cont .text_2 .gift_receive {
     font-size: 18px;
     color:#010101;
