--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -242,7 +242,6 @@ header .head_back span {
     display: inline-block;
     position: relative;
     padding-left: 16px;
-    cursor: pointer;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -855,7 +854,6 @@ header .head_back span {
 .course_box ul.list li {
     overflow: hidden;
     margin-bottom: 13px;
-    cursor: pointer;
 }
 .course_box ul.list li:last-child {
     margin-bottom: 0;
@@ -1489,3 +1487,73 @@ header .head_back span {
 /* go_top */
 .go_top {position:fixed; left:50%; margin-left: -62px; bottom:18px; cursor:pointer; z-index:99;}
 .go_top img {width:124px;}
+
+/* 개인정보 */
+.person_pop {
+    width: 260px;
+    height:190px;
+    background: #eee;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -100px 0 0 -130px;
+    padding:15px 10px;
+    text-align: left;
+}
+.person_pop .title {
+    font-size: 14px;
+    font-family:inaviM;
+    text-align: center;
+    margin-bottom:10px;
+    color:#000;
+}
+.person_pop .ptxt {
+    font-size: 13px;
+    font-family:inaviL;
+    color:#000;
+    line-height: 1.4;
+}
+.person_pop .ptxt .cont {
+    margin-top: 5px;
+    margin-left: 5px;
+}
+.person_pop .ptxt .cont span {
+    
+}
+.person_pop .ptxt .cont .nodata {
+    line-height: 1.6;
+    color:#999;
+    cursor: pointer;
+}
+.person_pop .ptxt .cont .data {
+    color:#000;
+}
+.person_pop .ptxt .cont .phone {
+    margin:0 3px;
+}
+.person_pop .ptxt .agree {
+    text-align: center;
+    margin-top: 10px;
+}
+.person_pop .ptxt .agree span {
+    display: inline-block;
+    width: 50px;
+    height: 24px;
+    line-height: 24px;
+    background: #c86550;
+    color:#fff;
+    border-radius: 4px;
+    margin: 0 3px;
+}
+.person_pop .ptxt .agree span.btn {
+    opacity: .4;
+}
+.person_pop .ptxt .agree span.on {
+    opacity: 1;
+    cursor: pointer;
+}
+.stamp_success {
+}
+.stamp_success h3 {
+    margin-bottom: 5px;
+}
