--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1497,7 +1497,7 @@ header .head_back span {
     top: 50%;
     left: 50%;
     margin: -100px 0 0 -130px;
-    padding:15px 10px;
+    padding: 10px;
     text-align: left;
 }
 .person_pop .title {
@@ -1533,7 +1533,7 @@ header .head_back span {
 }
 .person_pop .ptxt .agree {
     text-align: center;
-    margin-top: 10px;
+    margin-top: 7px;
 }
 .person_pop .ptxt .agree span {
     display: inline-block;
