--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1143,14 +1143,6 @@ header .head_back span {
     font-size: 12px;
     line-height: 18px;
 }
-
-
-
-
-
-
-
-
 .tour_sub_wrap .service_info {
     margin: 30px 0 0 25px;
     border-top: 1px solid #000;
@@ -1175,6 +1167,14 @@ header .head_back span {
     font-family: inaviL;
     font-size: 17px;
     color: #000;
+}
+.tour_sub_wrap .service_info .title span {
+    font-size: 10px;
+    display: inline-block;
+    padding-right: 25px;
+    line-height: 1.3;
+    margin-top: 3px;
+    color:#aaa;
 }
 .tour_sub_wrap .service_info .info {
     padding-right: 25px;
