--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1169,12 +1169,12 @@ header .head_back span {
     color: #000;
 }
 .tour_sub_wrap .service_info .title span {
-    font-size: 10px;
+    font-size: 11px;
     display: inline-block;
     padding-right: 25px;
     line-height: 1.3;
     margin-top: 3px;
-    color:#aaa;
+    color:#666;
 }
 .tour_sub_wrap .service_info .info {
     padding-right: 25px;
