--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1553,3 +1553,12 @@ header .head_back span {
 .stamp_success h3 {
     margin-bottom: 5px;
 }
+.giftDday {
+    position: absolute;
+    bottom: 0;
+    left: 47px;
+    font-size: 11px;
+    color: #c86550;
+    font-family:inaviL;
+    line-height: 1;
+}
