--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -375,7 +375,7 @@ header .head_back span {
     width:50%;
 }
 .pop_overay .pop_cont button.type1 {
-    border-right: 1px solid #fff;
+    border-right: 1px solid #d29284;
 }
 
 .pop_overay_2 {
@@ -572,20 +572,28 @@ header .head_back span {
 }
 .stamp_box ul.stamp_list li {
     float: left;
-    width: 44px;
-    margin-left: calc(25% - 55px);
+    width: 47px;
+    margin-left: calc(25% - 59px);
     margin-bottom: 15px;
     position: relative;
 }
 .stamp_box ul.stamp_list li .line {
-    display: none;
     text-indent: -9999px;
-    background-color: #c86550;
+    background-image: url('../images/dotdot.png');
+    background-repeat: repeat-x;
+    background-size: 5px;
     width:20px;
-    height:2px;
+    height:3px;
     position: absolute;
-    top: 20px;
-    right: 40px;
+    top: 22px;
+    right: 43px;
+}
+.stamp_box ul.stamp_list li .line.completeLine {
+    background: #c86550;
+    padding-left: 2px;
+    box-sizing: content-box;
+    top: 23px;
+    height:2px;
 }
 
 .stamp_box ul.stamp_list li .box {
@@ -820,7 +828,7 @@ header .head_back span {
      width: 10px;
      height: 10px;
      text-align: center;
-     background: #fff;
+     background: #faf7f1;
      border: 1px solid #d0a287;
      border-radius: 100%;
 }
@@ -844,7 +852,7 @@ header .head_back span {
 
 .course_box ul.list {
     background-color: #f6f1e7;
-    padding:17px 25px;
+    padding:17px 25px 55px;
 }
 .course_box ul.list li {
     overflow: hidden;
@@ -1172,6 +1180,7 @@ header .head_back span {
 }
 .tour_sub_wrap .service_info .info {
     padding-right: 25px;
+    padding-bottom: 35px;
 }
 .tour_sub_wrap .service_info .info h3 {
     font-weight: normal;
@@ -1325,6 +1334,7 @@ header .head_back span {
 
 .tour_sub_wrap .service_info ul.servie_list {
     padding-right: 25px;
+    padding-bottom: 30px;
 }
 .tour_sub_wrap .service_info ul.servie_list li {
     font-size: 14px;
@@ -1347,7 +1357,7 @@ header .head_back span {
 
 .tour_sub_wrap ul.view_list {
     overflow: hidden;
-    padding:25px;
+    padding: 25px 25px 50px;
 }
 .tour_sub_wrap ul.view_list li {
     float: left;
@@ -1402,6 +1412,7 @@ header .head_back span {
 .tour_sub_wrap ul.user_list {
     padding-left: 25px;
     background-color: #f7f8f9;
+    padding-bottom: 65px;
 }
 .tour_sub_wrap ul.user_list li {
     cursor: pointer;
