--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -211,19 +211,21 @@ header .head_back span {
     color:#010101;
     line-height:21px;
     background:#fff;
-    padding:66px 0 40px;
+    padding:50px 0 0;
     font-family:inaviL;
 }
 .pop_overay .pop_cont .text_2 .check {
     text-align: left;
-    padding: 0 50px
+    padding: 9px 25px;
+    background-color: #f7f8f9;
+    border-top:1px solid #fff;
 }
 .pop_overay .pop_cont .text_2 .check.durunubi {
     margin-bottom: 5px;
 }
 .pop_overay .pop_cont .text_2 .check label {
     font-size: 12px;
-    color:#000;
+    color:#3bb9fa;
     line-height: 14px;
 }
 .pop_overay .pop_cont .text_2 .check input[type="checkbox"] {
@@ -252,7 +254,7 @@ header .head_back span {
     height: 10px;
     text-align: center;
     background: #fff;
-    border: 1px solid #000000;
+    border: 1px solid #3bb9fa;
     border-radius: 100%;
 }
 .pop_overay .pop_cont .text_2 .check input[type="checkbox"]:checked + label:before {
@@ -266,18 +268,18 @@ header .head_back span {
     left: 0px;
     width: 12px;
     height: 12px;
-    background-image:url('../images/checked3.png');
+    background-image:url('../images/checked.png');
     background-repeat: no-repeat;
     background-size: 12px;
     background-position: center;
     border-radius: 100%;
 }
 .pop_overay .pop_cont .text_2 .gift_receive {
-    font-size: 18px;
+    font-size: 17px;
     color:#010101;
     margin-bottom: 20px;
     line-height: 1.4;
-    font-family:inaviM;
+    font-family:inaviL;
 }
 .pop_overay .pop_cont .text_2 .gift_receive b {
     color:#c86550;
@@ -345,7 +347,7 @@ header .head_back span {
 .pop_overay .pop_cont .text_2 > span {
     color:#c86550;
     display: block;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
 }
 .pop_overay .pop_cont .text_2 > span img {
     width:30px;
@@ -1566,6 +1568,7 @@ header .head_back span {
 
 /* 개인정보 */
 .person_pop {
+    display: none;
     width: 274px;
     background: #eee;
     position: absolute;
@@ -1650,6 +1653,7 @@ header .head_back span {
 }
 .mystamp_wrap ul {
     overflow: hidden;
+    margin-bottom: 55px;
 }
 .mystamp_wrap ul li {
     float: left;
@@ -1678,6 +1682,7 @@ header .head_back span {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    text-align: center;
 }
 
 .mystamp_wrap .box {
@@ -1763,7 +1768,8 @@ header .head_back span {
 =============================================*/
 
 .all_gift {
-    height:calc(100vh - 50px);
+    /* height:calc(100vh - 50px); */
+    height: 100%;
     background:#f7f8f9;
     padding: 0 0 0 25px;
 }
@@ -1866,4 +1872,82 @@ header .head_back span {
 }
 .all_gift ul.tour_list > li > ul.all_list li:last-child .line {
     display: none;
+}
+
+.agree_pop {
+    position: relative;
+    background-color: #f7f8f9;
+    text-align: left;
+    padding: 15px 25px 5px;
+}
+.agree_pop .notice {
+    display: inline-block;
+    font-family: inaviM;
+    background-color: #3bb9fa;
+    color:#fff;
+    font-size: 9px;
+    width: 38px;
+    height:18px;
+    line-height: 18px;
+    border-radius: 3px;
+    position: absolute;
+    top: -9px;
+    left: 50%;
+    margin-left: -19px;
+    z-index: 200;
+    text-align: center;
+}
+.agree_pop .agree_title {
+    font-family: inaviM;
+    font-size: 12px;
+    color:#000;
+    text-align: center;
+    margin-bottom: 10px;
+}
+.agree_pop .agree_desc {
+    font-family: inaviL;
+    font-size: 12px;
+    color:#c86550;
+    margin-bottom: 10px;
+}
+.agree_pop .agree_desc span {
+    color:#000;
+    display: inline-block;
+    text-indent: 8px;
+}
+.agree_pop .agree_info {
+    
+}
+.agree_pop .agree_info .tit {
+    display: inline-block;
+    font-family:inaviB;
+    font-size: 9px;
+    color: #835fa1;
+    text-align: center;
+    padding:2px 11px;
+    border:1px solid #835fa1;
+    line-height: 1;
+    border-radius: 10px;
+}
+.agree_pop .agree_info span {
+    display: block;
+    font-family: inaviL;
+    font-size: 12px;
+    color:#000;
+    padding:3px 0;
+    line-height: 1.4;
+    margin-left: 3px;
+}
+.noti_txt {
+    padding-top: 5px;
+    padding-bottom: 30px;
+    font-size: 17px;
+    color: #000;
+    font-family: inaviL;
+}
+.noti_txt span {
+    display: block;
+    font-size: 14px;
+    color: #c86550;
+    margin-top: 20px;
 }
