--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -175,7 +175,6 @@ header .head_back span {
     align-items: center;
     position: fixed;
     background: rgba(0, 0, 0, 0.8);
-    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
@@ -387,7 +386,6 @@ header .head_back span {
     align-items: center;
     position: fixed;
     background: rgba(0, 0, 0, 0.5);
-    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
@@ -1964,4 +1962,360 @@ header .head_back span {
     line-height: 1;
     text-align: center;
     padding:2px 0;
+}
+
+/*============================================
+
+                 숙박 인증 이벤트
+
+=============================================*/
+.event_intro_banner {
+    width:100%;
+    height: 55vw;
+    max-height: 320px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    z-index: 100;
+}
+.thema10_wrap {
+    height: calc(100vh - 100px);
+    background: url('../images/event/bg.png') no-repeat #f6f1e7 top -10px left 0px;
+    background-size: 120px;
+    padding:18px 20px 0;
+}
+
+.thema10_wrap .title_box {
+    font-size: 17px;
+    color:#000;
+    margin-bottom: 23px;
+}
+.thema10_wrap .title_box img {
+    width: 35px;
+    position: relative;
+    top: 7px;
+}
+.thema10_wrap .title_box span {
+    font-size: 12px;
+    color:#835fa1;
+    border: 1px solid #835fa1;
+    border-radius: 20px;
+    padding: 4px 11px;
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 7px;
+}
+
+.thema10_wrap .auth_box {
+    position: relative;
+    padding: 12px 10px;
+    background-color: #fff;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    box-shadow: 0px 8px 15px rgba(0,0,0,0.1);
+    height: calc(50vh - 135px);
+    overflow: scroll;
+}
+.thema10_wrap .auth_box .box {
+    height: calc(100% - 16px);
+}
+.thema10_wrap .auth_box .tit {
+    font-size: 14px;
+    color: #000;
+}
+.thema10_wrap .auth_box .tit img {
+    width: 15px;
+    margin-right: 7px
+}
+.thema10_wrap .auth_box .desc {
+    font-size: 12px;
+    color:#000;
+    line-height: 1.5;
+    height: calc(100% - 38px);
+    position: relative;
+}
+.thema10_wrap .auth_box .desc .p_center {
+    width: 100%;
+    display: inline-block;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.thema10_wrap .auth_box .desc .underline {
+    background-color: #c8deff;
+    line-height: 0px;
+    padding-bottom: 8px;
+    display: inline-block;
+}
+.thema10_wrap .auth_box .desc .color {
+    color:#3bb9fa;
+    display: inline-block;
+    margin-left: 3px;
+}
+
+.thema10_wrap .auth_box .btn {
+    width:100%;
+    font-size: 12px;
+    color:#3bb9fa;
+    text-align: center;
+    border: 1px solid #3bb9fa;
+    border-radius: 5px;
+    line-height: 1;
+    padding:12px 0;
+    cursor: pointer;
+}
+.thema10_wrap .auth_box .menu_btn {
+    width: 48px;
+    height: 21px;
+    /* background:#f7f8f9; */
+    border-radius: 20px;
+    background: url('../images/event/icon_menu.png') no-repeat #f7f8f9 center;
+    background-size: 14px;
+    position: absolute;
+    top: 11px;
+    right: 15px;
+    cursor: pointer;
+}
+
+.thema10 ul.btn_box {
+    position: fixed;
+    bottom: 0;
+    width:100%;
+    overflow: hidden;
+}
+.thema10 ul.btn_box li {
+    float: left;
+    width: 50%;
+    height: 55px;
+    line-height: 55px;
+    background-color: #c86550;
+    font-size: 14px;
+    color:#fff;
+    text-align: center;
+    cursor: pointer;
+}
+.thema10 ul.btn_box li:first-child {
+    border-right: 1px solid #d29284;
+}
+.thema10_wrap .auth_box .auth_check {
+    overflow: hidden;
+    padding-top: 15px;
+}
+.thema10_wrap .auth_box .auth_check .left {
+    float: left;
+    width:80px;
+    margin-right: 15px;
+}
+.thema10_wrap .auth_box .auth_check .left .img_box {
+    width:100%;
+    height:80px;
+    margin-bottom: 5px;
+    border-radius: 7px;
+}
+.thema10_wrap .auth_box .auth_check .left .img_box.img1 {
+    background-image: url('../images/event/stamp_dummy.png');
+    background-size: 69px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: #f7f8f9;
+}
+.thema10_wrap .auth_box .auth_check .left .img_box.img2 {
+    background-image: url('../images/dummy_img/img_1.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+.thema10_wrap .auth_box .auth_check .left .edit_btn {
+    cursor: pointer;
+    font-size: 11px;
+    color:#3bb9fa;
+    text-align: center;
+    border:1px solid #3bb9fa;
+    line-height: 1;
+    padding: 5px 0 6px;
+    border-radius: 2px;
+}
+.thema10_wrap .auth_box .auth_check .left .edit_btn img {
+    width:11px;
+    position: relative;
+    top: 1px;
+}
+.thema10_wrap .auth_box .auth_check .right {
+    float: left;
+}
+.thema10_wrap .auth_box .auth_check .right .txt1 {
+    font-size: 14px;
+    color: #000;
+    margin-bottom: 5px;
+}
+.thema10_wrap .auth_box .auth_check .right .txt1.type1 {
+    margin-top: 8px;
+}
+.thema10_wrap .auth_box .auth_check .right .txt1.type2 {
+    margin-top: 22px;
+}
+.thema10_wrap .auth_box .auth_check .right .txt2 {
+    font-size: 12px;
+    color: rgba(0, 0, 0, 0.5);
+}
+.thema10_wrap .auth_box .auth_check .right .txt3 {
+    margin-top: 17px;
+}
+.thema10_wrap .auth_box .auth_check .right .txt3 img {
+    width: 11px;
+    position: relative;
+    top: 1px;
+}
+.thema10_wrap .auth_box .auth_check .right .txt3 .ptc {
+    font-size: 12px;
+    color: rgba(0, 0, 0, 0.5);
+    padding: 0 6px;
+    border-right: 1px solid #ccc;
+    line-height: 7px;
+    display: inline-block;
+}
+.thema10_wrap .auth_box .auth_check .right .txt3 .count {
+    font-size: 12px;
+    color: #cc705c;
+    margin-left: 6px;
+}
+.thema10_wrap .auth_box .auth_complete {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+    padding:6px;
+}
+
+.example_pop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: #fff;
+    width: 100%;
+    height:100%;
+    z-index: 9999;
+}
+.example_pop .photo_box {
+    background-color: #f6f1e7;
+    width: 100%;
+    padding-top: 40px;
+    padding-bottom: 35px;
+    height:calc(100% - 100px);
+}
+.example_pop .photo_box .title {
+    font-family: inaviL;
+    font-size: 17px;
+    color:#000;
+    line-height:1.4;
+    text-align: center;
+    margin-bottom: 30px;
+}
+.example_pop .photo_box .title span {
+    color:#3bb9fa;
+}
+.example_pop .photo_box .photo {
+    text-align: center;
+}
+.example_pop .photo_box img {
+    width: 200px;
+}
+.example_pop .photo_box .warning {
+    font-family: inaviM;
+    font-size: 12px;
+    color:#c86550;
+    text-align: center;
+    position: relative;
+    top: 10px;
+}
+.example_pop .chkbox {
+    padding:16px 25px;
+    width:100%;
+    position: absolute;
+    bottom: 50px;
+    left: 0;
+}
+.example_pop .chkbox label {
+    font-size: 12px;
+    color:#3bb9fa;
+    
+}
+.example_pop button {
+    display: block;
+    width:100%;
+    height: 50px;
+    line-height: 50px;
+    background-color: #c86550;
+    color:#fff;
+    font-size: 14px;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+.example_pop .chkbox input[type="checkbox"] {
+     position: absolute;
+     width: 1px;
+     height: 1px;
+     padding: 0;
+     margin: -1px;
+     overflow: hidden;
+     border: 0;
+}
+.example_pop .chkbox input[type="checkbox"] + label {
+     display: inline-block;
+     position: relative;
+     padding-left: 16px;
+     cursor: pointer;
+     -webkit-user-select: none;
+     -moz-user-select: none;
+     -ms-user-select: none;
+}
+.example_pop .chkbox input[type="checkbox"] + label:before {
+     content: '';
+     position: absolute;
+     left: 0;
+     top: 0;
+     width: 10px;
+     height: 10px;
+     text-align: center;
+     background: #fff;
+     border: 1px solid #3bb9fa;
+     border-radius: 100%;
+}
+.example_pop .chkbox input[type="checkbox"]:checked + label:before {
+    background: #fff;
+    border-color: #fff;
+}
+
+.example_pop .chkbox input[type="checkbox"]:checked + label:after {
+    content: '';
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 12px;
+    height: 12px;
+    background-image:url('../images/checked.png');
+    background-repeat: no-repeat;
+    background-size: 12px;
+    background-position: center;
+    border-radius: 100%;
+}
+ul.photo_select {
+    background:#fff;
+}
+ul.photo_select li {
+    color:#000;
+    font-size: 14px;
+    height: 50px;
+    line-height: 50px;
+    border-bottom: 1px solid #e5e5e5;
+    cursor: pointer;
+}
+ul.photo_select li:last-child {
+    border:0;
 }
