--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -210,7 +210,7 @@ header .head_back span {
     color:#010101;
     line-height:21px;
     background:#fff;
-    padding:50px 0 0;
+    padding:50px 0 20px;
     font-family:inaviL;
 }
 .pop_overay .pop_cont .text_2 .check {
