선물 만료 문구 추가, 테마10선 이벤트 추가

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1177,6 +1177,9 @@ header .head_back span {
 .tour_sub_wrap ul.gift_list li:last-child .line {
     display: none;
 }
+.tour_sub_wrap ul.gift_list li .gift_icon.end img {
+    display: none;
+}
 
 
 
