메인페이지 최적화(페이징 처리, 불필요 호출 제거)

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2427,3 +2427,10 @@ ul.photo_select li input[type="file"] {
 .close_pop img {
     width:30px;
 }
+.loading_box {
+    height:60px;
+    text-align: center;
+}
+.loading_box img {
+    
+}
