--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2431,6 +2431,14 @@ ul.photo_select li input[type="file"] {
     height:60px;
     text-align: center;
 }
-.loading_box img {
-    
+.thema_phone {
+    display: block;
+    width: 70%;
+    margin-top: 5px;
+    font-size: 12px;
+    color: #000;
+    font-family: inaviL;
+    padding:4px 8px;
+    border: 1px solid #835fa1;
+    background-color: #f7f8f9;
 }
