--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -739,7 +739,7 @@ header .head_back span {
     color:#010101;
     line-height: 16px;
     font-weight: normal;
-    word-break: keep-all;
+    /* word-break: keep-all; */
 }
 .recom_stamp ul.next_stamp li p {
     font-family:inaviL;
